# StackDB

./: .gitignore  Cargo.toml  README.md  todo.md
src/: base.rs  default.rs  errors.rs  lib.rs  main.rs  prelude.rs
src/base/: database.rs  image.rs  layer.rs
src/base/database/: allocator.rs
src/base/layer/: mapper.rs
src/default/: alloc.rs
tests/: database.rs  layer.rs
